Add data classes for image and object annotations in dev notebook

--- a/notebooks/dev.ipynb
+++ b/notebooks/dev.ipynb
@@ -17,7 +17,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import cv2 as cv"
+    "import cv2 as cv\n",
+    "from dataclasses import dataclass, field\n",
+    "from typing import List\n",
+    "import numpy as np"
    ]
   },
   {
@@ -32,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,22 +54,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<Element 'annotation' at 0x7fe408de20e0>"
+       "'000001.jpg'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#root"
+    "root.find(\"filename\").text"
    ]
   },
   {
@@ -158,6 +161,255 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define data structure\n",
+    "@dataclass\n",
+    "class BoundingBox:\n",
+    "    xmin: int\n",
+    "    ymin: int\n",
+    "    xmax: int\n",
+    "    ymax: int\n",
+    "\n",
+    "@dataclass\n",
+    "class ObjectAnnotation:\n",
+    "    class_name: str\n",
+    "    bbox: BoundingBox\n",
+    "\n",
+    "@dataclass\n",
+    "class ImageData:\n",
+    "    filename: str\n",
+    "    filepath: str\n",
+    "    width: int\n",
+    "    height: int\n",
+    "    image: np.ndarray = None\n",
+    "    objects: List[ObjectAnnotation] = field(default_factory=list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/home/joluseti/projects/object-detection-tracking/data/raw'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "image_path = Path.cwd()\n",
+    "str(image_path.parent / \"data/raw\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ROOT_DIR = Path.cwd().parent\n",
+    "image_path = ROOT_DIR / \"data\" / \"raw\" / \"VOC2007\" / \"JPEGImages\"\n",
+    "annotation_path = ROOT_DIR / \"data\"/\"raw\"/\"VOC2007\" /\"Annotations\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PosixPath('/home/joluseti/projects/object-detection-tracking/data/raw/VOC2007/JPEGImages')"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "image_path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'48'"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "root.find(\"object/bndbox/xmin\").text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_sample(image_path, annotation_path):\n",
+    "    tree = ET.parse(annotation_path)\n",
+    "    root = tree.getroot()\n",
+    "\n",
+    "    filename = root.find(\"filename\").text\n",
+    "    filepath = image_path\n",
+    "    width = int(root.find(\"size/width\").text)\n",
+    "    height = int(root.find(\"size/height\").text)\n",
+    "    image = cv.imread(image_path)\n",
+    "    objects = []\n",
+    "    \n",
+    "    for obj in root.findall(\"object\"):\n",
+    "        class_name = obj.find(\"name\").text\n",
+    "        xmin = int(obj.find(\"bndbox/xmin\").text)\n",
+    "        ymin = int(obj.find(\"bndbox/ymin\").text)\n",
+    "        xmax = int(obj.find(\"bndbox/xmax\").text)\n",
+    "        ymax = int(obj.find(\"bndbox/ymax\").text)\n",
+    "        objects.append(ObjectAnnotation(class_name, BoundingBox(xmin, ymin, xmax, ymax)))\n",
+    "    \n",
+    "    return ImageData(filename, filepath, width, height, image, objects)\n",
+    "\n",
+    "\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_image = list(image_path.rglob(\"*\"))[0]\n",
+    "test_annot = list(annotation_path.rglob(\"*\"))[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test = get_sample(image_path=test_image, annotation_path=test_annot)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PosixPath('/home/joluseti/projects/object-detection-tracking/data/raw/VOC2007/Annotations/000001.xml')"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_annot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test = ET.parse(str(test_annot))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ImageData(filename='000001.jpg', filepath=PosixPath('/home/joluseti/projects/object-detection-tracking/data/raw/VOC2007/JPEGImages/000001.jpg'), width=353, height=500, image=array([[[  0,   1,   1],\n",
+       "        [  0,   1,   1],\n",
+       "        [  0,   1,   1],\n",
+       "        ...,\n",
+       "        [  3,   4,   2],\n",
+       "        [  3,   4,   2],\n",
+       "        [  2,   3,   1]],\n",
+       "\n",
+       "       [[  0,   1,   1],\n",
+       "        [  0,   1,   1],\n",
+       "        [  0,   1,   1],\n",
+       "        ...,\n",
+       "        [  4,   5,   3],\n",
+       "        [  3,   4,   2],\n",
+       "        [  2,   3,   1]],\n",
+       "\n",
+       "       [[  0,   1,   1],\n",
+       "        [  0,   1,   1],\n",
+       "        [  0,   1,   1],\n",
+       "        ...,\n",
+       "        [  5,   6,   4],\n",
+       "        [  3,   4,   2],\n",
+       "        [  2,   2,   2]],\n",
+       "\n",
+       "       ...,\n",
+       "\n",
+       "       [[ 95,  54,  45],\n",
+       "        [ 63,  25,  13],\n",
+       "        [ 77,  42,  28],\n",
+       "        ...,\n",
+       "        [114,  54,  24],\n",
+       "        [114,  54,  25],\n",
+       "        [117,  51,  26]],\n",
+       "\n",
+       "       [[ 64,  25,  16],\n",
+       "        [ 64,  29,  16],\n",
+       "        [103,  70,  55],\n",
+       "        ...,\n",
+       "        [122,  62,  32],\n",
+       "        [121,  61,  32],\n",
+       "        [123,  56,  31]],\n",
+       "\n",
+       "       [[ 51,  12,   3],\n",
+       "        [ 70,  35,  22],\n",
+       "        [ 93,  60,  45],\n",
+       "        ...,\n",
+       "        [120,  60,  31],\n",
+       "        [119,  59,  30],\n",
+       "        [118,  51,  26]]], dtype=uint8), objects=[ObjectAnnotation(class_name='dog', bbox=BoundingBox(xmin=48, ymin=240, xmax=195, ymax=371)), ObjectAnnotation(class_name='person', bbox=BoundingBox(xmin=8, ymin=12, xmax=352, ymax=498))])"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -166,9 +418,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "obj-trk",
+   "display_name": "CV proj",
    "language": "python",
-   "name": "python3"
+   "name": "obj-trk"
   },
   "language_info": {
    "codemirror_mode": {
