Fix execution counts in dev notebook and update kernelspec display name

--- a/notebooks/dev.ipynb
+++ b/notebooks/dev.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
        "'000001.jpg'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +155,8 @@
     "    rect = patches.Rectangle((xmin, ymin), xmax - xmin, ymax - ymin, linewidth=1, edgecolor=\"r\", facecolor=\"none\")\n",
     "    ax.add_patch(rect)\n",
     "    ax.text(xmin, ymin, obj[\"class\"], color=\"white\", fontsize=10, backgroundcolor=\"red\")\n",
-    "\n",
+    "    \n",
+    "plt.grid(False)\n",
     "plt.show()"
    ]
   },
@@ -607,9 +608,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "CV proj",
+   "display_name": "obj-trk",
    "language": "python",
-   "name": "obj-trk"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
