Fix execution counts in dev notebook to ensure correct order of cell execution

--- a/notebooks/dev.ipynb
+++ b/notebooks/dev.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
        "'000001.jpg'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
        " {'class': 'person', 'bbox': [8, 12, 352, 498]}]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +200,7 @@
        "'/home/joluseti/projects/object-detection-tracking/data/raw'"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +232,7 @@
        "PosixPath('/home/joluseti/projects/object-detection-tracking/data/raw/VOC2007/JPEGImages')"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
        "'48'"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +323,7 @@
        "PosixPath('/home/joluseti/projects/object-detection-tracking/data/raw/VOC2007/Annotations/000001.xml')"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,64 +343,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "ImageData(filename='000001.jpg', filepath=PosixPath('/home/joluseti/projects/object-detection-tracking/data/raw/VOC2007/JPEGImages/000001.jpg'), width=353, height=500, image=array([[[  0,   1,   1],\n",
-       "        [  0,   1,   1],\n",
-       "        [  0,   1,   1],\n",
-       "        ...,\n",
-       "        [  3,   4,   2],\n",
-       "        [  3,   4,   2],\n",
-       "        [  2,   3,   1]],\n",
-       "\n",
-       "       [[  0,   1,   1],\n",
-       "        [  0,   1,   1],\n",
-       "        [  0,   1,   1],\n",
-       "        ...,\n",
-       "        [  4,   5,   3],\n",
-       "        [  3,   4,   2],\n",
-       "        [  2,   3,   1]],\n",
-       "\n",
-       "       [[  0,   1,   1],\n",
-       "        [  0,   1,   1],\n",
-       "        [  0,   1,   1],\n",
-       "        ...,\n",
-       "        [  5,   6,   4],\n",
-       "        [  3,   4,   2],\n",
-       "        [  2,   2,   2]],\n",
-       "\n",
-       "       ...,\n",
-       "\n",
-       "       [[ 95,  54,  45],\n",
-       "        [ 63,  25,  13],\n",
-       "        [ 77,  42,  28],\n",
-       "        ...,\n",
-       "        [114,  54,  24],\n",
-       "        [114,  54,  25],\n",
-       "        [117,  51,  26]],\n",
-       "\n",
-       "       [[ 64,  25,  16],\n",
-       "        [ 64,  29,  16],\n",
-       "        [103,  70,  55],\n",
-       "        ...,\n",
-       "        [122,  62,  32],\n",
-       "        [121,  61,  32],\n",
-       "        [123,  56,  31]],\n",
-       "\n",
-       "       [[ 51,  12,   3],\n",
-       "        [ 70,  35,  22],\n",
-       "        [ 93,  60,  45],\n",
-       "        ...,\n",
-       "        [120,  60,  31],\n",
-       "        [119,  59,  30],\n",
-       "        [118,  51,  26]]], dtype=uint8), objects=[ObjectAnnotation(class_name='dog', bbox=BoundingBox(xmin=48, ymin=240, xmax=195, ymax=371)), ObjectAnnotation(class_name='person', bbox=BoundingBox(xmin=8, ymin=12, xmax=352, ymax=498))])"
+       "<xml.etree.ElementTree.ElementTree at 0x7f7ed1206f10>"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -411,24 +363,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "def create_data_splits(dataset_root):\n",
-    "    dataset_root = Path(dataset_root)\n",
-    "    voc_07_dir = dataset_root / \"VOC2007\"\n",
-    "    voc_12_dir = dataset_root / \"VOC2012\"\n",
-    "    voc_07_image_dir = voc_07_dir / \"JPEGImages\"\n",
-    "    voc_12_image_dir = voc_12_dir / \"JPEGImages\"\n",
-    "    voc_07_annotation_dir = voc_07_dir / \"Annotations\"\n",
-    "    voc_12_annotation_dir = voc_12_dir / \"Annotations\"\n",
-    "    voc_07_data_dir = voc_07_dir / \"ImageSets\" / \"Main\"\n",
-    "    voc_12_data_dir = voc_12_dir / \"ImageSets\" / \"Main\"\n",
-    "    \n",
-    "    train_file_07 = voc_07_data_dir / \"trainval.txt\"\n",
-    "    train_file_12 = voc_12_data_dir / \"trainval.txt\"\n",
-    "    test_file = voc_07_data_dir / \"test.txt\"\n",
+    "\n",
+    "    try:\n",
+    "        dataset_root = Path(dataset_root)\n",
+    "        voc_07_dir = dataset_root / \"VOC2007\"\n",
+    "        voc_12_dir = dataset_root / \"VOC2012\"\n",
+    "        voc_07_image_dir = voc_07_dir / \"JPEGImages\"\n",
+    "        voc_12_image_dir = voc_12_dir / \"JPEGImages\"\n",
+    "        voc_07_annotation_dir = voc_07_dir / \"Annotations\"\n",
+    "        voc_12_annotation_dir = voc_12_dir / \"Annotations\"\n",
+    "        voc_07_data_dir = voc_07_dir / \"ImageSets\" / \"Main\"\n",
+    "        voc_12_data_dir = voc_12_dir / \"ImageSets\" / \"Main\"\n",
+    "        \n",
+    "        train_file_07 = voc_07_data_dir / \"trainval.txt\"\n",
+    "        train_file_12 = voc_12_data_dir / \"trainval.txt\"\n",
+    "        test_file = voc_07_data_dir / \"test.txt\"\n",
+    "\n",
+    "    except (ValueError) as e:\n",
+    "        raise ValueError(f\"\")\n",
     "\n",
     "\n",
     "    train_paths_07 = [(voc_07_image_dir / f\"{image_name}.jpg\", voc_07_annotation_dir / f\"{image_name}.xml\") for image_name in train_file_07.read_text().splitlines() if image_name]\n",
@@ -459,6 +416,46 @@
    "outputs": [],
    "source": [
     "train_data, test_data = create_data_splits(dataset_root = ROOT_DIR / \"data\" / \"raw\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PosixPath('/home/joluseti/projects/object-detection-tracking')"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Path(ROOT_DIR).resolve()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PosixPath('/home/joluseti/projects/object-detection-tracking')"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Path(ROOT_DIR).resolve()"
    ]
   },
   {
