--- a/notebooks/dev.ipynb
+++ b/notebooks/dev.ipynb
@@ -578,10 +578,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[ObjectAnnotation(class_name='person', bbox=BoundingBox(xmin=185, ymin=62, xmax=279, ymax=199)),\n",
+       " ObjectAnnotation(class_name='horse', bbox=BoundingBox(xmin=90, ymin=78, xmax=403, ymax=336))]"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "item.objects"
+   ]
   },
   {
    "cell_type": "code",
@@ -590,6 +604,17 @@
    "outputs": [],
    "source": [
     "def preprocess(image_data, target_size=(224,224)):\n",
+    "    H, W = image_data.height, image_data.width\n",
+    "\n",
+    "    norm_boxes = []\n",
+    "    for obj in image_data.objects:\n",
+    "        bbox = obj.bbox\n",
+    "        norm_boxes.append([\n",
+    "            bbox.xmin / W,\n",
+    "            bbox.ymin / H,\n",
+    "            bbox.xmax / W,\n",
+    "            bbox.ymax / H\n",
+    "        ])\n",
     "    "
    ]
   },
@@ -623,6 +648,147 @@
    "source": [
     "DataLoader()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "H, W = 32, 32\n",
+    "img = torch.randint(0, 256, size=(3, H, W), dtype=torch.uint8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 6, 10, 13,  2],\n",
+       "        [ 7,  1, 10,  4],\n",
+       "        [ 8,  9,  0,  7]])"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "boxes = torch.randint(0, 16, size=(3, 4))\n",
+    "boxes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 6, 10, 19, 12],\n",
+       "        [ 7,  1, 17,  5],\n",
+       "        [ 8,  9,  8, 16]])"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "boxes[:, 2:] += boxes[:, :2]\n",
+    "boxes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from torchvision import tv_tensors\n",
+    "from torchvision.transforms import v2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "BoundingBoxes([[ 6, 10, 19, 12],\n",
+       "               [ 7,  1, 17,  5],\n",
+       "               [ 8,  9,  8, 16]], format=BoundingBoxFormat.XYXY, canvas_size=(32, 32))"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "boxes = tv_tensors.BoundingBoxes(boxes, format=\"XYXY\", canvas_size=(32, 32))\n",
+    "boxes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transforms = v2.Compose([\n",
+    "    v2.RandomResizedCrop(size=(224, 224), antialias=True),\n",
+    "    v2.RandomHorizontalFlip(p=0.5),\n",
+    "    v2.ToDtype(torch.float32, scale=True),\n",
+    "    v2.Normalize(mean=[0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225]),\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img, boxes = transforms(img, boxes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "BoundingBoxes([[123,   0, 224,   0],\n",
+       "               [163,   0, 224,   0],\n",
+       "               [224,   0, 224,   0]], format=BoundingBoxFormat.XYXY, canvas_size=(224, 224))"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "boxes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
